--- a/templates/korisnik/home.html
+++ b/templates/korisnik/home.html
@@ -7,5 +7,12 @@
 <body>
 <h1>KORISNIK POCETNA</h1>
     <a href="{% url 'logout' %}">LOG OUT</a>
+    <a  href="{% url 'korisnik-sve-zaduzene-knjige' %}">Sve knjige zaduzene</a>
+    <a href="{% url 'korisnik-sve-knjige' %}">Sve knjige</a>
+    <form method="get" action="{% url 'korisnik-pretraga-knjiga' %}">
+        <label for="search_str_id">Unesite naziv knjige</label>
+        <input id="search_str_id" type="text" name="search_string">
+        <input type="submit" value="Pretrazi">
+    </form>
 </body>
 </html>
