--- a/templates/sluzbenik/add_knjiga.html
+++ b/templates/sluzbenik/add_knjiga.html
@@ -14,6 +14,8 @@
 {% endif %}
     <form method="post" action="" enctype="multipart/form-data">
         {{ form }}
+        <label for="broj_primeraka_id">Broj primeraka </label>
+        <input type="number" id="broj_primeraka_id" name="broj_primeraka">
         {% csrf_token %}
         <button type="submit" >Dodaj</button>
     </form>
