--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   {% load static %}
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
     <meta charset="UTF-8">
     <title>Biblioteka Odiseja</title>
 </head>
 <body>
-    DOBRODOSOLI !!
-    <a href="{% url 'login' %}">LOGIN</a>
-    <a href="{% url 'registration' %}">REGISTRACIJA</a>
+  <nav class="navbar">
+    <a href="#" class="toggle"><i class="fa fa-reorder"></i></a>
+    <a href="#" class="brand">Biblioteka Odiseja</a>
+    <div class="left">
+
+    </div>
+    <div class="right">
+      <a href="{% url 'registration' %}" class="link">Register</a>
+        <a href="{% url 'login' %}" class="link">Login</a>
+    </div>
+  </nav>
+<div class="content">
+    <div class="naslov">
+        <h1> BIBLIOTEKA ODISEJA </h1>
+    </div>
+</div>
+
 
 </body>
+
+
 </html>
