--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,18 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   {% load static %}
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
     <meta charset="UTF-8">
-    <title>Registration</title>
+    <title>Biblioteka Odiseja</title>
 </head>
 <body>
+  <nav class="navbar">
+    <a href="#" class="toggle"><i class="fa fa-reorder"></i></a>
+    <a href="#" class="brand">Biblioteka Odiseja</a>
+    <div class="left">
+        <a class="link" href="{% url 'biblioteka-index' %}">Home</a>
+    </div>
+    <div class="right">
+      <a href="{% url 'registration' %}" class="link">Register</a>
+        <a href="{% url 'login' %}" class="link">Login</a>
+    </div>
+  </nav>
+<div class="content">
+<div class="centre register">
+        {% if messages %}
 
-<h2>Sign up</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form }}
+                  {% for message in messages %}
+                     <div{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</div>
+                 {% endfor %}
 
-   <button type="submit">Sign up</button>
-  </form>
+        {% endif %}
+            <h1>Register</h1>
+            <form method="post">
+                {% csrf_token %}
+                <table>
+                    <tr>
+                        <td><label for="id_username">Username</label></td>
+                        <td><input id="id_username" name="username"
+                                   type="text"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="id_password">Password</label></td>
+                        <td><input id="id_password" name="password1"
+                                   type="password"></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="id_password2"> Ponovite password :</label>
+                        </td>
+                        <td>
+                            <input type="password" id="id_password2" name="password2">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="first_name">Ime :</label>
+                        </td>
+                        <td>
+                            <input type="text" id="first_name" name="first_name">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="last_name">Prezime :</label>
+                        </td>
+                        <td>
+                            <input type="text" id="last_name" name="last_name">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="datum_rodjenja">Datum rodjenja :</label>
+                        </td>
+                        <td>
+                            <input type="date" name="datum_rodjenja" id="datum_rodjenja">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="email">Email :</label>
+                        </td>
+                        <td>
+                            <input type="email" name="email" id="email">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="adresa">Adresa :</label>
+                        </td>
+                        <td>
+                            <input type="text" name="adresa" id="adresa">
+                        </td>
+                    </tr>
+                    <tr><td> <input type="submit" value="Registruj se"></td></tr>
 
-</body>
+                </table>
+            </form>
+
+    </div>
+</div>
+
+
 </html>
