--- a/templates/sluzbenik/add_zaduzenje.html
+++ b/templates/sluzbenik/add_zaduzenje.html
@@ -1,21 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <meta charset="UTF-8">
-    <title>Zaduzenje</title>
+    <title>Dodaj novo zaduženje</title>
 </head>
 <body>
+<nav class="navbar">
+    <a href="#" class="toggle"><i class="fa fa-reorder"></i></a>
+    <a href="#" class="brand">Biblioteka Odiseja</a>
+    <div class="left">
+        <a class="link" href="{% url 'sluzbenik-home' %}">Home</a>
+        <div class="dropdown">
+             <a class="link">Knjiga</a>
+        <div class="dropdown-content">
+              <a href="{% url 'add-knjiga' %}">Dodaj novu knjigu</a>
+              <a href="{% url 'knjiga-sve' %}">Sve knjige u evidenciji</a>
+         </div>
+        </div>
+        <div class="dropdown">
+             <a class="link">Korisnik</a>
+        <div class="dropdown-content">
+              <a href="{% url 'korisnik-svi' %}">Svi korisnici</a>
+         </div>
+        </div>
+        <a class="link" href="{% url 'add-zaduzenje' %}">Dodaj zaduženje</a>
+    </div>
+    <div class="right">
+       <div class="search-bar">
+         <form method="get" action="{% url 'sluzbenik-pretraga-knjiga' %}">
+                 <input id="search_str_id" type="text" name="search_string" placeholder="Unesite željeni naziv knjige">
+                  <button class="btn" type="submit">Pretrazi</button>
+         </form>
+       </div>
+        <a href="{% url 'logout' %}" class="link">Logout</a>
+    </div>
+</nav>
 {% if messages %}
-<ul class="messages">
     {% for message in messages %}
-    {{ message }}
+        <div class="{{ message.tags }}">
+             {{ message }}
+        </div>
     {% endfor %}
-</ul>
 {% endif %}
-    <form method="post" action="">
-        {{ form }}
-        {% csrf_token %}
-        <button type="submit">Dodaj</button>
-    </form>
+<div class="content">
+    <div class="centre add-knjiga">
+         <h1>Dodaj novu knjigu</h1>
+             <form method="post" action="">
+                  {% csrf_token %}
+                   <table>
+                         <tr>
+                               <td>
+                                     <label for="id_korisnik">Korisnik</label>
+                               </td>
+                               <td>
+                                     {{ form.korisnik }}
+                                </td>
+                          </tr>
+                         <tr>
+                                <td>
+                                       <label for="id_primerak">Primerak :</label>
+                                </td>
+                                <td>
+                                        {{ form.primerak }}
+                                </td>
+                         </tr>
+                          <tr>
+                               <td>
+                                    <button type="submit" class="button" >Dodaj</button>
+                              </td>
+                          </tr>
+                      </table>
+         </form>
+    </div>
+</div>
 </body>
 </html>
