--- a/templates/sluzbenik/home.html
+++ b/templates/sluzbenik/home.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <meta charset="UTF-8">
     <title>Sluzbenik</title>
 </head>
 <body>
-<h1>SLUZBENIK POCETNA</h1>
-    <a href="{% url 'logout' %}">LOG OUT</a>
-    <a href="{% url 'add-knjiga' %}">Dodaj knjigu</a>
-    <a href="{% url 'add-zaduzenje' %}">Dodaj zaduzenje</a>
-    <a href="{% url 'knjiga-details' pk=7 %}">Knjiga sa slikom</a>
-    <a href="{% url 'korisnik-svi' %}">Svi korisnici</a>
-    <a href="{% url 'knjiga-sve' %}">Sve knjige</a>
+<nav class="navbar">
+    <a href="#" class="toggle"><i class="fa fa-reorder"></i></a>
+    <a href="#" class="brand">Biblioteka Odiseja</a>
+    <div class="left">
+        <div class="dropdown">
+             <a class="link">Knjiga</a>
+        <div class="dropdown-content">
+              <a href="{% url 'add-knjiga' %}">Dodaj novu knjigu</a>
+              <a href="{% url 'knjiga-sve' %}">Sve knjige u evidenciji</a>
+         </div>
+        </div>
+        <div class="dropdown">
+             <a class="link">Korisnik</a>
+        <div class="dropdown-content">
+              <a href="{% url 'korisnik-svi' %}">Svi korisnici</a>
+         </div>
+        </div>
+        <a class="link" href="{% url 'add-zaduzenje' %}">Dodaj zaduženje</a>
+    </div>
+    <div class="right">
+       <div class="search-bar">
+         <form method="get" action="{% url 'sluzbenik-pretraga-knjiga' %}">
+                 <input id="search_str_id" type="text" name="search_string" placeholder="Unesite željeni naziv knjige">
+                  <button class="btn" type="submit">Pretrazi</button>
+         </form>
+       </div>
+        <a href="{% url 'logout' %}" class="link">Logout</a>
+    </div>
+ </nav>
+<div class="content">
+    <div class="naslov">
+        <h1> Dobrodošli, {{ korisnik.user.username }}</h1>
+    </div>
+</div>
 </body>
 </html>
